fixed formating, players can now see previous history but canot jump to it just yet

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ body {
   font-weight: bold;
   margin-bottom: 10px;
   padding: 5px;
-  border: 1px solid green;
 }
 .container {
   border: 1px solid black;
@@ -30,4 +29,14 @@ body {
   flex-wrap: wrap;
   max-width: 300px;
 }
+.game {
+  display: flex;
+  align-items: center;
+}
+.g-board {
+  display: block;
+}
+.g-info {
+  display: block;
 
+}
